--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ansi-styles": "^3.2.1",
     "express": "^4.16.4",
     "google-spreadsheet": "^2.0.7",
     "http": "0.0.0",
